--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,9 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<h1>Cinema Ironhack</h1>
+
+<div>
+
+  <img id="background" src="/images/cinema.jpg" alt="cinema" >
+  <button>Check the movies</button>
+
+
+</div>
