--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,9 +1,11 @@
-<h1>Cinema Ironhack</h1>
 
-<div>
 
-  <img id="background" src="/images/cinema.jpg" alt="cinema" >
-  <button>Check the movies</button>
+<div class="home container-fluid">
 
+  <h1>Cinema Ironhack</h1> <br>
+  <h1></h1>
+  
+  <button href="/movies" type="button" class="btn btnmovies" >Check the movies</button>
+  
 
 </div>
