--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,19 +3,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    {{!-- import boostrap --}}
     <title>{{title}}</title>
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
   <body>
 
-    <nav>
-      <a href="/">Home</a>
-      <a href="/movies">Movies</a>
-      
-    </nav>
-
     {{{body}}}
 
     <script src="/js/script.js"></script>
+    <script src="/bootstrap/js/bootstrap.min.js"></script>
   </body>
 </html>
